# avatar-creator

./: .gitignore  README.md  avatar-creator.in  config.py.in  meson.build
avatar_creator/: application.py  grid.py  main_window.py
data/: about_dialog.ui.in  avatar-creator.css  avatar-creator.gresources.xml  grid.ui  main_window.ui  meson.build  org.endlessos.avatarCreator.appdata.xml.in.in  org.endlessos.avatarCreator.desktop.in.in
data/icons/: meson.build
flatpak/: org.endlessos.avatarCreator.json
po/: POTFILES.in  README.md  meson.build
